--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/IOTPANEL
+spring.datasource.username = postgres
+spring.datasource.password = admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.open-in-view=false
+
+spring.devtools.restart.enabled:  false
+
 
