--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username = postgres
 spring.datasource.password = admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
-
-spring.devtools.restart.enabled:  false
+spring.devtools.restart.enabled=  false
+#spring.jpa.hibernate.ddl-auto=create
 
 
