--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.password = admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
 spring.devtools.restart.enabled=  false
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+
 
 
