--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 principalRequestValue= token
 
+#email sender
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=e2180061899e58
+spring.mail.password=5c17a4b1e9a420
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
